compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_list_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let assert [theElement] = [9.4]"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let assert [theElement] = [9.4]
  │             ^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: the_element
