compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_parameter_label2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn ignore(thisIsALabel _ignore: Int) { 25 }"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:11
  │
1 │ fn ignore(thisIsALabel _ignore: Int) { 25 }
  │           ^^^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: this_is_a_label
