compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_parameter_name3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let add = fn(numA: Int, num_b: Int) { numA + num_b }"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:14
  │
1 │ let add = fn(numA: Int, num_b: Int) { numA + num_b }
  │              ^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: num_a
